--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "type": "module",
   "devDependencies": {
     "@ice/app": "beta",
     "@types/react": "^18.0.0",
+    "express": "^4.16.3",
     "@types/react-dom": "^18.0.0"
   },
   "scripts": {
